@@ -1,5 +1,6 @@
 Changes for 1.4.7:
 
+ - [ZBX-602] fixed possible incorrect trigger evaluation if value sotred as "delta" (Sasha)
  - [ZBX-450] fixed showing status of items in maps for non english locale (Sasha)
  - [ZBX-432] set trigger value to unknown if changed item status (Sahsa)
  - [DEV-198] improved displaying of disabled items in the maps (Sasha)
